# aurca

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs
src/components/: help.rs
src/core/: log.rs  parser.rs
src/core/definitions/: cli.rs  parameter.rs  search_response.rs
src/internal/: logger.rs  parameter.rs  parser.rs
src/lib/: component.rs  mod.rs
src/parameters/: help.rs  search.rs  version.rs
